WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277745
[WebXR] EnableRequiredWebXRExtensions can't be behind the prompt
https://bugs.webkit.org/show_bug.cgi?id=277745
Summary
[WebXR] EnableRequiredWebXRExtensions can't be behind the prompt
Mike Wyrzykowski
Reported
2024-08-07 10:21:34 PDT
[WebXR] EnableRequiredWebXRExtensions can't be behind the prompt
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-08-07 10:21:49 PDT
radar://133317583
Mike Wyrzykowski
Comment 2
2024-08-07 10:25:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31837
EWS
Comment 3
2024-08-07 11:52:03 PDT
Committed
281947@main
(e2badf99cf10): <
https://commits.webkit.org/281947@main
> Reviewed commits have been landed. Closing PR #31837 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug