[WebXR] EnableRequiredWebXRExtensions can't be behind the prompt https://bugs.webkit.org/show_bug.cgi?id=277745 <radar://133317583>

Unreviewed partial revert of 281114@main

The website may enable the extensions prior to entering immersive mode, so this
message can not be behind the UI prompt.

* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.h:

Canonical link: https://commits.webkit.org/281947@main